planets page: fixed moons not showing bug

--- a/src/scss/page-3/page-3.scss
+++ b/src/scss/page-3/page-3.scss
@@ -129,11 +129,12 @@
             font-size: clamp(1.5rem, 3.3vmin, 2.8rem);
             color: #e96a76;
             font-family: $ubuntu;
+            letter-spacing: 1px;
         }
 
 
         &--img-info--wrap {
-            padding: 1.5rem 0 1.2rem 0;
+            padding: 2rem 0 1.2rem 0;
 
 
             @include breakpoint(large) {
@@ -190,7 +191,7 @@
 
 
             &-foreign {
-                padding: 1.2rem 0 0 0;
+                padding: 2rem 0 0 0;
 
 
                 line-height: 1.8;
